Add Responsive footer

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,4 @@
 .footer {
-  min-height: 50vh;
   background-color: #131515;
   display: flex;
   flex-direction: column;
@@ -12,17 +11,17 @@
   max-width: 1080px;
   text-align: start;
   color: #a3a7a7;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 .footer_block {
   display: flex;
   flex-direction: column;
   align-items: start;
   min-width: 300px;
-  min-height: 150px;
   flex-grow: 1;
   flex-shrink: 0;
   flex-basis: 0;
-  margin-top: 32px;
 }
 .footer_section_title h1 {
   font-size: 18px;
@@ -137,9 +136,84 @@
   display: flex;
   gap: 30px;
 }
+.footer_moonvalley_grid_mobile {
+  visibility: hidden;
+  opacity: 0;
+  display: none;
+  height: 0px;
+}
 
 @media (width <= 500px) {
   .footer_moonvalley_grid {
-    display: block;
+    visibility: hidden;
+    display: none;
+    opacity: 0;
+    height: 0px;
+  }
+  .footer_block_mobile {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+  }
+  .footer_logo {
+    display: flex;
+  }
+  .footers_footer {
+    visibility: hidden;
+    height: 0px;
+  }
+  .footers_footer_mobile {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+  }
+
+  .footers_footer_mobile ul,
+  a {
+    display: flex;
+    gap: 1rem;
+    color: rgb(146, 146, 146);
+  }
+
+  .footer_moonvalley_grid_mobile {
+    visibility: visible;
+    opacity: 1;
+    display: flex;
+    flex-direction: column;
+    color: #acacac;
+    height: 100%;
+  }
+
+  .accordeon_tab {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.089);
+  }
+  .accordeon_header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 1.5rem;
+    font-size: 18px;
+  }
+  .accordeon_container {
+    overflow-y: hidden;
+    transition: all 0.2s ease-in;
+    height: 0px;
+  }
+  .accordeon_content {
+    padding: 0.5rem 1.5rem;
+  }
+  .open {
+    height: 100%;
+  }
+  .closed {
+    transition: 0.2s ease;
+    transform: rotate(0deg);
+  }
+  .icon {
+    transition: 0.2s ease;
+    transform: rotate(-180deg);
   }
 }
