--- a/src/components/navbarMobile/navbarmobile.css
+++ b/src/components/navbarMobile/navbarmobile.css
@@ -183,6 +183,10 @@
   }
 
   .login_mobile-form button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
     font-family: inherit;
     font-weight: 700;
     font-size: 18px;
@@ -200,7 +204,21 @@
     color: var(--dark-color);
     border: 1px solid var(--dark-color);
   }
-
+  .errormessage {
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    font-size: 1.2rem;
+    font-weight: 600;
+  }
+  .error-message-wrapper {
+    width: 100%;
+    padding: 20px 10px;
+    background-color: #ed4337;
+    color: white;
+    margin-bottom: 1rem;
+    text-align: center;
+  }
   .password_input {
     width: 100%;
     padding: 0.52rem 1rem;
@@ -228,6 +246,7 @@
   .iconsvgtwo {
     color: var(--main-color);
   }
+
   .hideshow {
     display: flex;
     align-items: center;
@@ -239,8 +258,18 @@
     gap: 1rem;
   }
   .rememberme {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+
     margin-top: 1rem;
     font-size: 14px;
+  }
+  .switchsvg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--main-color);
   }
   .forgot_password {
     width: 100%;
