--- a/src/pages/home/sections/toptours/toptours.css
+++ b/src/pages/home/sections/toptours/toptours.css
@@ -27,7 +27,7 @@
   width: 100%;
 }
 .toptours_card-item {
-  flex-basis: 300px;
+  flex-basis: 349px;
   min-height: 360px;
 }
 .toptours_card {
@@ -189,6 +189,10 @@
   .toptours_tourprice h4 {
     font-size: 24px;
     font-weight: 900;
+  }
+  .toptours_card-item {
+    flex-basis: 360px;
+    min-height: 360px;
   }
 }
 @media (width < 1270px) {
