--- a/src/pages/home/sections/hero/hero.css
+++ b/src/pages/home/sections/hero/hero.css
@@ -42,6 +42,7 @@
 .hero_content h1 {
   line-height: 1;
   font-size: clamp(2rem, 5vw, 4rem);
+  font-weight: 700;
 }
 .search_hero_wrapper {
   position: relative;
@@ -58,7 +59,7 @@
   border-radius: 6px;
   z-index: 1;
   outline: 1px solid rgb(255, 255, 255);
-  width: 110%;
+  width: 100%;
   position: absolute;
   border-radius: 4px;
 }
@@ -253,6 +254,16 @@
   }
   100% {
     --gradient-angle: 360deg;
+  }
+}
+
+@media (width <= 500px) {
+  .hero_search input {
+    padding: 10px 5px;
+  }
+  .hero_search button {
+    width: 130px;
+    font-weight: 600;
   }
 }
 
