--- a/src/pages/home/sections/toptours/toptours.css
+++ b/src/pages/home/sections/toptours/toptours.css
@@ -78,7 +78,6 @@
 .toptours_details-previous.bg {
   background-color: white;
   width: 100%;
-  border-radius: 5px;
   display: flex;
   justify-content: space-between;
   padding: 10px 20px;
@@ -89,7 +88,7 @@
   flex-direction: column;
   align-items: start;
   text-wrap: balance;
-  color: var(--main-color);
+  color: var(--dark-color);
 }
 .toptours_details h3 {
   font-size: 14px;
@@ -98,20 +97,20 @@
 .toptours_details span {
   font-size: 12px;
   font-weight: 400;
-  color: gray;
+  color: rgb(85, 85, 85);
 }
 .toptours_details strong {
   margin-right: 5px;
   font-size: 16px;
   font-weight: 900;
-  color: var(--main-color);
+  color: var(--dark-color);
 }
 .toptours_tourprice {
   display: flex;
   justify-content: center;
   align-items: start;
   gap: 1px;
-  color: var(--main-color);
+  color: var(--dark-color);
 }
 .price_tour {
   display: flex;
