--- a/src/components/navbarMobile/navbarmobile.css
+++ b/src/components/navbarMobile/navbarmobile.css
@@ -167,7 +167,7 @@
     gap: 2rem;
   }
   .login_mobile-form input {
-    padding: 0.65rem 1rem;
+    padding: 10px;
     border: 1px solid #cccccc;
     background-color: #f8f8f8;
     border-radius: 5px;
@@ -188,14 +188,13 @@
     align-items: center;
     overflow: hidden;
     font-family: inherit;
-    font-weight: 700;
     font-size: 18px;
     background-color: var(--dark-color);
     border: 1px solid transparent;
     color: white;
     border-radius: 4px;
     width: 100%;
-    padding: 1rem 2rem;
+    padding: 1rem 0.5rem;
     transition: 0.2s ease;
     cursor: pointer;
   }
@@ -221,7 +220,7 @@
   }
   .password_input {
     width: 100%;
-    padding: 0.52rem 1rem;
+    padding: 10px;
     border: 1px solid #cccccc;
     background-color: #f8f8f8;
     border-radius: 5px;
@@ -331,5 +330,15 @@
   }
   #checkMobile {
     display: none;
+  }
+  .registerMobile {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 3rem;
+    gap: 5px;
+  }
+  .registerMobile_Wrd {
+    color: var(--main-color);
   }
 }
