--- a/src/components/registerform/registerForm.css
+++ b/src/components/registerform/registerForm.css
@@ -6,6 +6,8 @@
 .checkboxes {
   display: flex;
   flex-direction: column;
+  justify-content: start;
+  gap: 20px;
   padding-top: 1rem;
   padding-bottom: 1rem;
   width: 100%;
@@ -16,6 +18,12 @@
   font-size: 14px;
   color: rgb(88, 88, 88);
   cursor: pointer;
+  align-items: center;
+  justify-content: start;
+}
+.checkboxes input {
+  width: 20px;
+  height: 20px;
 }
 .register_content-inputs {
   display: flex;
