Add destination responsiveness

--- a/src/pages/city/city.css
+++ b/src/pages/city/city.css
@@ -63,7 +63,6 @@
   height: 100%;
   width: 100%;
   z-index: -1;
-  min-height: 35vh;
 }
 .tags small {
   z-index: 9999;
@@ -90,18 +89,16 @@
   gap: 2rem;
 }
 .city_content-sidebar {
-  padding: 1rem;
-  width: 25%;
-  height: 600px;
+  padding: 1rem 1rem;
+  min-width: 220px;
+  height: max-content;
   background-color: white;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
 }
-.city_content-cards {
-  width: 75%;
-}
+
 .city_card {
   background-color: white;
   padding: 1rem;
@@ -289,4 +286,30 @@
 .non {
   color: var(--secondary-color);
   font-weight: 700;
+}
+
+@media (width <= 766px) {
+  .city_intro {
+    min-height: 100%;
+  }
+  .city_title {
+    padding: 2rem 1rem;
+  }
+  .city_title h1 {
+    font-size: 46px;
+    color: white;
+  }
+  .city_details {
+    display: none;
+    visibility: hidden;
+  }
+  .city_blackoverlay {
+    height: 100%;
+  }
+  .city_content {
+    flex-direction: column;
+  }
+  .city_content-sidebar {
+    width: 100%;
+  }
 }
