--- a/src/pages/city/city.css
+++ b/src/pages/city/city.css
@@ -287,6 +287,9 @@
   color: var(--secondary-color);
   font-weight: 700;
 }
+.showCategories {
+  display: none;
+}
 
 @media (width <= 766px) {
   .city_intro {
@@ -308,8 +311,61 @@
   }
   .city_content {
     flex-direction: column;
+    gap: 0;
   }
   .city_content-sidebar {
     width: 100%;
+  }
+
+  .city_content-sidebar {
+    opacity: 0;
+    visibility: hidden;
+    position: relative;
+  }
+
+  .city_content-sidebar-shown {
+    opacity: 1;
+    visibility: visible;
+    background: transparent;
+    z-index: 99999;
+    transition: all 0.1s ease;
+  }
+
+  .showCategories {
+    display: block;
+    margin-top: -16px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 600;
+  }
+  .showCategories span {
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(204, 203, 203);
+    color: rgb(145, 145, 145);
+    flex-grow: 1;
+    padding: 1.2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+  }
+  .iconsvgsort {
+    color: var(--text-color);
+  }
+  .filters {
+    position: absolute;
+    margin: 0 auto;
+    top: 0;
+    right: 0;
+    background-color: rgb(255, 255, 255);
+    width: 100vw;
+    padding: 1rem;
+    box-shadow: var(--shadow-elevation-medium);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
   }
 }
