--- a/src/pages/home/sections/maindestinations/maindestinations.css
+++ b/src/pages/home/sections/maindestinations/maindestinations.css
@@ -126,22 +126,22 @@
 }
 
 .showmore_button button {
-  background-color: transparent;
+  background-color: var(--dark-color);
   font-family: inherit;
   font-weight: 700;
   font-size: 18px;
   height: 50px;
   border: 2px solid transparent;
-  color: var(--dark-color);
-  border: 1px solid var(--dark-color);
+  color: #fff;
   border-radius: 4px;
   width: 200px;
   transition: 0.2s ease;
   cursor: pointer;
 }
 .showmore_button button:hover {
-  background-color: var(--dark-color);
-  color: white;
+  background-color: transparent;
+  border: 1px solid var(--dark-color);
+  color: var(--dark-color);
 }
 @media (width < 500px) {
   .maindestinations_content {
