--- a/src/components/destcard/destcard.css
+++ b/src/components/destcard/destcard.css
@@ -19,3 +19,120 @@
     background-color: hsl(200, 20%, 95%);
   }
 }
+
+.card {
+  position: relative;
+  margin: 0 auto;
+  background-color: var(--main-color);
+  border-radius: 5px;
+  box-shadow: var(--shadow-elevation-medium);
+  cursor: pointer;
+  display: flex;
+  flex: 1;
+  height: 300px;
+  min-width: 300px;
+}
+.face {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.face.back {
+  padding: 30px;
+}
+.face.back .desc {
+  background-color: white;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.face.front {
+  overflow: hidden;
+  transition: 0.2s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+}
+.face.front img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 9;
+}
+.face.front b {
+  margin: 0;
+  padding: 0;
+  font-size: clamp(2rem, 3vw, 3rem);
+  color: #fff;
+  z-index: 10;
+  text-shadow: 1px 1px 2px rgb(168, 1, 1), 0 0 1em rgba(0, 0, 0, 0.226),
+    0 0 0.1em rgba(0, 0, 0, 0.863);
+  transition: 0.2s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+}
+
+.card:hover .face.front {
+  height: 120px;
+}
+
+.card:hover .face.front b {
+  font-size: clamp(1rem, 2vw, 1.5rem);
+}
+.face.front {
+  border-radius: 5px;
+}
+.top {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+.top strong {
+  font-size: 26px;
+  font-weight: 900;
+}
+.top span {
+  color: white;
+  font-weight: 700;
+  font-size: 14px;
+}
+.top_left,
+.top_right {
+  display: flex;
+  flex-direction: column;
+}
+.bottom {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+.bottom strong {
+  font-size: 26px;
+  font-weight: 900;
+}
+.bottom span {
+  color: white;
+  font-weight: 700;
+  font-size: 14px;
+}
+.bottom_left,
+.bottom_right {
+  display: flex;
+  flex-direction: column;
+}
+
+.top_left,
+.bottom_left {
+  width: 60%;
+}
+
+.top_right,
+.bottom_right {
+  width: 40%;
+}
