Add style to cards

--- a/src/pages/home/sections/maindestinations/maindestinations.css
+++ b/src/pages/home/sections/maindestinations/maindestinations.css
@@ -8,7 +8,7 @@
 }
 .maindestinations_header {
   display: flex;
-  justify-content: center;
+  justify-content: start;
 }
 
 .maindestinations_grid {
