--- a/src/pages/home/sections/hero/hero.css
+++ b/src/pages/home/sections/hero/hero.css
@@ -171,7 +171,7 @@
 .hero_search_suggestion_title {
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: start;
   color: var(--dark-color);
   padding: 30px 20px;
 }
