--- a/src/pages/home/sections/hero/hero.css
+++ b/src/pages/home/sections/hero/hero.css
@@ -10,7 +10,7 @@
 }
 .hero_content {
   background: linear-gradient(rgba(0, 0, 0, 0) 68%, #00000069),
-    url(/header-bg.webp);
+    url(https://res.cloudinary.com/drtykwq1x/image/upload/q_100/v1717899583/Header-moonvalley_svkenl.webp);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -43,6 +43,9 @@
   line-height: 1;
   font-size: clamp(2rem, 5vw, 4rem);
   font-weight: 700;
+  font-family: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
 }
 .search_hero_wrapper {
   position: relative;
