--- a/src/pages/country/country.css
+++ b/src/pages/country/country.css
@@ -23,10 +23,10 @@
   min-height: 35vh;
 }
 
-.country_title h1 {
+.country_title {
   font-size: 80px;
   color: white;
-  padding-top: 5rem;
+  margin-top: 5rem;
   padding-bottom: 2rem;
   text-shadow: rgba(0, 0, 0, 0.541) 2px 2px 10px;
 }
