Add sidebar to my account page

--- a/src/components/destcard/destcard.css
+++ b/src/components/destcard/destcard.css
@@ -25,7 +25,7 @@
   margin: 0 auto;
   background-color: var(--dark-color);
   border-radius: 5px;
-  box-shadow: var(--shadow-elevation-medium);
+  box-shadow: var(--perfect-shadow);
   cursor: pointer;
   display: flex;
   flex: 1;
