--- a/src/components/select/select.css
+++ b/src/components/select/select.css
@@ -10,17 +10,11 @@
     border-radius: 8px;
     outline: none;
 }
-.select__value{
-    transition: .2s ease;
-}
-.select__container:focus .select__value{
-    transform: translate(-15px, -37px);
-    font-size: 12px;
-    color: var(--accent-color);
-}
+
 .select__value{
     flex-grow: 1;
 }
+
 .select__clearbtn{
     background: none;
     color: #777;
@@ -56,7 +50,6 @@
     overflow-y: auto;
     border: 1px solid var(--accent-color);
     border-radius: 8px;
-    padding: calc(var(--padding) * 1.25) 1rem;
     width: 100%;
     left: 0;
     top: calc(100% + .25em);
@@ -68,6 +61,16 @@
     display: block;
 }
 .select__option{
-    padding: .25em .5em;
+    padding: calc(var(--padding) * 1.25) 1rem;
     cursor: pointer;
 }
+.select__option.highlighted{
+    background-color: var(--hover);
+    color: white;
+}
+.select__option.selected{
+    background-color: var(--secondary-color);
+    color: white;
+}
+
+
