--- a/src/components/select/select.css
+++ b/src/components/select/select.css
@@ -13,7 +13,16 @@
     background-color: var(--background-color);
     user-select: none;
 }
-
+.select__container:focus{
+    background-color: white;
+}
+.select__title{
+    position: absolute;
+    top: -20px;
+    left: 0;
+    font-size: 12px;
+    color: var(--accent-color);
+}
 .select__value{
     flex-grow: 1;
 }
