--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,10 @@ dialog {
   position: fixed;
   margin: 0 auto;
   margin-top: 20px;
-  height: 100vh;
   border: none;
   padding: 2rem 3rem;
   border-radius: 10px;
+  box-shadow: var(--perfect-shadow);
 }
 dialog::backdrop {
   backdrop-filter: blur(3px);
