--- a/src/components/select/select.css
+++ b/src/components/select/select.css
@@ -21,7 +21,7 @@
     top: -20px;
     left: 0;
     font-size: 12px;
-    color: var(--accent-color);
+    color: gray;
 }
 .select__value{
     flex-grow: 1;
